tests/reject/genericFunctionIncompatibleArgument.emojic
🐇 🌺 🍇
  🐇🐖 💡 🐚T🔡 a T 🍇
    😀 a
  🍉
🍉

🏁 🍇
  🍩💡🌺 🔤home🔤
  🍩💡🌺 🐚🚂 132
🍉
